--- a/full-stack.html
+++ b/full-stack.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://neugelb.join.com/jobs/271002-full-stack-developer-m-f-d'>Job @ NEUGELB Studios (Berlin): Full-Stack Develop... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='http://hfarm.applytojob.com/apply/sMATwC5scH/Junior-FullStack-Developer'>Junior Full-Stack Developer - H-FARM S.p.A - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
@@ -58,7 +62,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://fractalanalytics.applytojob.com/apply/bs79JV7FwI/Senior-Engineer-Full-Stack'>Senior Engineer, Full Stack - Fractal Analytics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fractalanalytics.applytojob.com/apply/bs79JV7FwI/Senior-Engineer-Full-Stack'>Senior Engineer, Full Stack - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -66,7 +70,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/iSpaceInc/743999692410317-full-stack-developer'>iSpace, Inc. Full Stack Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/iSpaceInc/743999692410317-full-stack-developer'>iSpace, Inc. Full Stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -130,6 +134,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
+<h5><a href='https://justaddmusic.join.com/jobs/259403-fullstack-developer-m-f-d'>Fullstack Developer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Jul 17, 2019 ... JAM Just Add Music GmbH has a job opening for Fullstack Developer (m/f/d) in 
+Berlin (published: 19.06.2019). Apply now or check the other available jobs.</p>
+<hr/>
 <h5><a href='https://productsup.join.com/jobs/266046-php-full-stack-developer-m-f-d'>Job @ Productsup (Berlin): PHP Full-Stack Develope... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
@@ -156,7 +165,7 @@ Platform?...</p>
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://ontruck.workable.com/jobs/1084650'>Senior Full Stack Engineer - Apply online - Ontruck - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ontruck.workable.com/jobs/1084650'>Senior Full Stack Engineer - Apply online - Ontruck - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Senior Full Stack Engineer at Ontruck.</p>
 <hr/>
@@ -176,7 +185,7 @@ Platform?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pod-point.workable.com/j/EFDF12E5CD'>Pod Point Ltd - Jobs: Full Stack (PHP/JS) Developer - Apply online</a></h5> 
+<h5><a href='https://pod-point.workable.com/j/EFDF12E5CD'>Pod Point Ltd - Jobs: Full Stack (PHP/JS) Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -184,7 +193,7 @@ Platform?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/efront/1caf7064-9f66-4896-8db2-1ba301bb2cd3'>eFront - Full Stack Developer (eFront Insight)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/efront/1caf7064-9f66-4896-8db2-1ba301bb2cd3'>eFront - Full Stack Developer (eFront Insight)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -205,7 +214,7 @@ generation web and mobile components and interfaces. Design and build a?...</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Anitian/743999692312256-full-stack-developer'>Anitian  Full Stack Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Anitian/743999692312256-full-stack-developer'>Anitian  Full Stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -225,7 +234,7 @@ generation web and mobile components and interfaces. Design and build a?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://pae.wd1.myworkdayjobs.com/PAE_Careers/job/US-DC-Washington/Full-Stack-Developer_R0036236-2'>Full Stack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://pae.wd1.myworkdayjobs.com/PAE_Careers/job/US-DC-Washington/Full-Stack-Developer_R0036236-2'>Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Full Stack Developer. Macfadden, now part of PAE, is seeking a Drupal Web 
 Developer to support USAID's Office of Transition Initiatives (OTI). In this position
@@ -257,7 +266,7 @@ Developer to support USAID's Office of Transition Initiatives (OTI). In this pos
 <p><span class="badge badge-light">Denver</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/zenefits/jobs/1771950'>Job Application for Fullstack Engineer at Zenefits</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/zenefits/jobs/1771950'>Job Application for Fullstack Engineer at Zenefits</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... As our Senior Full Stack Engineer you'll get your hands dirty while building 
 elements of our HR platform offerings as well as automating our complex 
@@ -281,7 +290,7 @@ Rochester School is a private school focused on environmental sustainability and
 <p><span class="badge badge-light">San Francisco, California San Francisco Columbus</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ComputerConsultantsInternational1/743999692249637-full-stack-software-developer-consultant-job-id-63689-'>Computer Consultants International, Inc. Full Stack Software Developer Consultant(Job ID:63689) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ComputerConsultantsInternational1/743999692249637-full-stack-software-developer-consultant-job-id-63689-'>Computer Consultants International, Inc. Full Stack Software Developer Consultant(Job ID:63689) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, UT</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -289,7 +298,7 @@ Rochester School is a private school focused on environmental sustainability and
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/align-tech/job/oB1yafw4'>Align Technology Careers - Jr. Full Stack Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/align-tech/job/oB1yafw4'>Align Technology Careers - Jr. Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Align Technology dev team is looking for a new junior Full-stack developer. 
 Specifically, we're looking for experienced developers to work on VERY 
@@ -336,7 +345,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Warsaw Warsaw, Poland</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://miles.applytojob.com/apply/EweJOxe6v6/Full-Stack-Developer'>Full Stack Developer - Miles Employment Group - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://miles.applytojob.com/apply/EweJOxe6v6/Full-Stack-Developer'>Full Stack Developer - Miles Employment Group - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -368,7 +377,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartin.join.com/jobs/248370-fullstack-web-developer-m-w'>Job @ smartin ADVERTISING (Cologne): Fullstack Web... | JOIN</a></h5> 
+<h5><a href='https://smartin.join.com/jobs/248370-fullstack-web-developer-m-w'>Job @ smartin ADVERTISING (Cologne): Fullstack Web... | JOIN</a></h5> 
 <p><span class="badge badge-light">Cologne, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -434,7 +443,7 @@ published: 11.10.2018). Apply now or check the other available jobs.</p>
 <p>vor 5 Tagen ... TwinCap GmbH has a job opening for Java Full Stack Developer / Senior Java 
 Full Stack Developer in Z?rich (published: 19.07.2019). Apply now or check the?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/3A07DE013B'>STAQ - Jobs: Software Engineer - Full Stack - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/3A07DE013B'>STAQ - Jobs: Software Engineer - Full Stack - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Software Engineer - Full Stack at STAQ.</p>
 <hr/>
@@ -442,7 +451,7 @@ Full Stack Developer in Z?rich (published: 19.07.2019). Apply now or check the?.
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Full Stack Engineer (Javascript) at KNOREX.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/B6274B3760'>OneinaMil - Jobs: Full Stack Engineer (PHP/Vue.JS) - Apply online</a></h5> 
+<h5><a href='https://www.workable.com/j/B6274B3760'>OneinaMil - Jobs: Full Stack Engineer (PHP/Vue.JS) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Full Stack Engineer (PHP/Vue.JS) at OneinaMil.</p>
 <hr/>
@@ -458,14 +467,6 @@ environment?...</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/houzz/cfac3b53-dc1b-4eaa-b032-4dc685aeeb93'>Houzz - Senior Full-Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/buoyhealth/e6e77887-b5f9-4b2a-98b5-61b8d0010dcf'>Buoy Health - Senior Full Stack Software Engineer (NYC)</a></h5> 
-<p><span class="badge badge-light">NYCNYCNew York, NY</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://onfido.workable.com/j/AEC1FF3CCE'>Onfido - Jobs: Full Stack Engineer (Biometrics) | Lisbon - Apply online</a></h5> 
-<p><span class="badge badge-light">Lisbon Lisbon</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
 
